[package]
name = "nvline"
version = "0.1.0"
edition = "2021"
description = "A simple command line tool to record your gpu usage"
repository = "https://github.com/drbh/nvline"
authors = ["David Holtz <github.com/drbh>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
